# fjohansen

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml
docs/: _config.yml  build_site.py  index.html  style.css
docs/tables/: beta_matrix.html  critical_values.html  psy_per_series.html  trace_comparison.html
examples/: _build_tutorial_notebook.py  example_limit_distributions.py  example_section5_monte_carlo.py  example_section6_jgb.py  fjohansen_tutorial.ipynb
fjohansen/: __init__.py  core.py  critical_values.py  data.py  frequency_select.py  models.py  plotting.py  simulation.py  tables.py  utils.py
tests/: test_basic.py
