[build-system]
requires = ["setuptools>=61.0,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fjohansen"
version = "0.1.0"
description = "Johansen cointegration test with Fourier-type smooth nonlinear trends in cointegrating relations (Kurita & Shintani, 2025)."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Merwan Roudane"}
]
maintainers = [
    {name = "Merwan Roudane"}
]
keywords = [
    "cointegration",
    "Johansen",
    "Fourier",
    "nonlinear trend",
    "VAR",
    "econometrics",
    "time series",
    "unit root",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "pandas>=1.4",
    "matplotlib>=3.5",
    "statsmodels>=0.13",
]

[project.optional-dependencies]
pretty = ["rich>=13.0", "tabulate>=0.9"]
dev    = ["pytest>=7.0", "black", "ruff"]

[project.urls]
Homepage   = "https://github.com/merwanroudane/fjohansen"
Repository = "https://github.com/merwanroudane/fjohansen"
Issues     = "https://github.com/merwanroudane/fjohansen/issues"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
include = ["fjohansen*"]
exclude = ["tests*", "examples*"]
